--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -977,23 +977,36 @@ object {
       flex-direction: column;
   -ms-flex-pack: center;
       justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
-  height: 0; }
+  max-width: 100%; }
   .about-banner .site-logo, .about-banner .about-title, .about-banner p {
     visibility: hidden;
     height: 0;
     width: 0;
     overflow: hidden; }
   .about-banner .about-header {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-pack: center;
-        justify-content: center;
-    -ms-flex-align: center;
-        align-items: center; }
+    background: rgba(255, 255, 255, 0.5); }
+
+.about-header-container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: start;
+      align-items: flex-start; }
+
+.about-header-content {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  margin-left: 10vw;
+  padding: 1rem; }
 
 h3 {
   margin: 0;
@@ -1164,7 +1177,7 @@ strong {
   .about-banner {
     background: url(../../images/about-page-banner-lg.jpg) no-repeat center left;
     background-size: cover;
-    height: 70vh;
+    height: 80vh;
     overflow: hidden;
     position: relative; }
     .about-banner .site-logo {
@@ -1179,9 +1192,9 @@ strong {
       width: auto;
       overflow: hidden;
       max-width: 250px;
-      color: #fff;
-      border-bottom: solid 2px #fff;
-      border-top: solid 2px #fff;
+      color: black;
+      border-bottom: solid 2px black;
+      border-top: solid 2px black;
       font-size: 1.5rem;
       padding: 10px 0;
       width: 250px;
