--- a/themes/bix/sass/_teaser-stories.scss
+++ b/themes/bix/sass/_teaser-stories.scss
@@ -22,7 +22,7 @@
 	max-width:100%;
 	margin: 50px 0;
 	.more-stories{
-		background: url(../../images/about-bickson2.jpg) no-repeat center left;
+		background: url(../../images/bix-book-banner-lg.jpg) no-repeat center left;
 		background-size: cover;
 		min-height: 500px;
 		overflow: hidden;
