--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -8,6 +8,9 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+		h1 {
+			margin: 0;
+		}
 		.site-logo{
 			visibility: hidden;
 			height: 0;
@@ -24,6 +27,12 @@
 		  }
 	}
 
+	.bix-book-header-container {
+		text-align: center;
+		text-transform: uppercase;
+		padding: 1rem;
+	}
+
 	.the-bix-book-title{
 		width: 100%;
 		color:$color__orange;
@@ -32,7 +41,6 @@
 		font-size: 1rem;
 		letter-spacing: 1px;
 		padding:3px 0;
-		width: 230px;
 		text-align: center;
 		text-transform: uppercase;
 		font-weight: 500;
