--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -971,8 +971,7 @@ object {
 # About Page
 --------------------------------------------------------------*/
 .about-banner {
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -ms-flex-direction: column;
       flex-direction: column;
   -ms-flex-pack: center;
@@ -1175,6 +1174,8 @@ strong {
 
 @media all and (min-width: 600px) {
   .about-banner {
+    display: -ms-flexbox;
+    display: flex;
     background: url(../../images/about-page-banner-lg.jpg) no-repeat center left;
     background-size: cover;
     height: 80vh;
@@ -2172,6 +2173,8 @@ strong {
       justify-content: center;
   -ms-flex-align: center;
       align-items: center; }
+  .bix-book-banner h1 {
+    margin: 0; }
   .bix-book-banner .site-logo {
     visibility: hidden;
     height: 0;
@@ -2185,6 +2188,11 @@ strong {
     text-transform: uppercase;
     font-weight: 300; }
 
+.bix-book-header-container {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1rem; }
+
 .the-bix-book-title {
   width: 100%;
   color: #F9AC31;
@@ -2193,7 +2201,6 @@ strong {
   font-size: 1rem;
   letter-spacing: 1px;
   padding: 3px 0;
-  width: 230px;
   text-align: center;
   text-transform: uppercase;
   font-weight: 500; }
@@ -2623,7 +2630,6 @@ strong {
         justify-content: center;
     -ms-flex-align: center;
         align-items: center;
-    margin-left: 10vw;
     padding: 1rem; }
   .stories-banner .stories-title {
     width: 100%;
@@ -2642,7 +2648,15 @@ strong {
   .stories-banner .stories-subtitle {
     font-weight: 300;
     display: block;
-    width: 100%; }
+    width: 100%;
+    text-align: center; }
+  .stories-banner .btn-download {
+    background-color: black;
+    padding: 5px 20px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300; }
 
 /* ----------------- Stories Section -------------*/
 .stories-article {
@@ -2720,11 +2734,7 @@ strong {
     margin-bottom: 50px;
     max-width: 100%; }
   .stories-main .entry-content .btn-stories {
-    width: 250px; }
-  .stories-banner {
-    -ms-flex-align: initial;
-        -ms-grid-row-align: initial;
-        align-items: initial; } }
+    width: 250px; } }
 
 @media (min-width: 700px) {
   .stories-banner .stories-title {
@@ -2760,13 +2770,12 @@ strong {
         content: " Stories"; }
     .stories-banner .stories-subtitle {
       color: black; }
-    .stories-banner .btn-download {
-      background-color: black;
-      padding: 5px 20px;
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 300; }
+  .stories-banner {
+    -ms-flex-align: initial;
+        -ms-grid-row-align: initial;
+        align-items: initial; }
+  .stories-content {
+    margin-left: 10vw; }
   .stories-main .entry-content {
     opacity: 0; }
     .stories-main .entry-content .btn-stories {
@@ -2815,7 +2824,7 @@ strong {
   max-width: 100%;
   margin: 50px 0; }
   .teaser-section1 .more-stories {
-    background: url(../../images/about-bickson2.jpg) no-repeat center left;
+    background: url(../../images/bix-book-banner-lg.jpg) no-repeat center left;
     background-size: cover;
     min-height: 500px;
     overflow: hidden;
