finished home page banner

--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -31,6 +31,7 @@ $grey_dark: #3f4042;
 
 $font__main: 'Roboto', sans-serif;
 $font__header: 'Titillium Web', sans-serif;
+$font__univers: 'Univers_Condensed', sans-serif;
 
 $font-size__main: 18px;
 $font-size__header: 36px;
