--- a/themes/bix/sass/_stories.scss
+++ b/themes/bix/sass/_stories.scss
@@ -39,28 +39,32 @@
 	  border-bottom: solid 2px $color__orange;
 	  border-top: solid 2px $color__orange;
 	  font-size: 1rem;
-	  letter-spacing: 1px;
+	  letter-spacing: 5px;
 	  padding:3px 0;
-	  width: 230px;
 	  text-align: center;
 	  text-transform: uppercase;
-	  font-weight: 500;
+	  font-weight: bold;
+	  font-family: $font__univers;
 	  margin-bottom: 0;
-	  margin-top: 20px; 
+	  margin-top: 10px; 
 	}
 	.stories-subtitle{
 		font-weight: 300;
+		width: 80%;
 		display: block;
-		width: 100%;
 		text-align: center;
+		font-family: $font__univers;
+		letter-spacing: 0.1rem;
 	}
 	.btn-download{
-	    background-color: black;
+	   background-color: black;
 	    padding: 5px 20px;
 	    color: #fff;
 	    text-decoration: none;
 	    text-transform: uppercase;
-	    font-weight: 300;
+	    margin-top: 0;
+	    font-weight: 500;
+	    font-family: $font__univers;
 	}
 }
 
@@ -151,15 +155,15 @@
 	    }	
 		}	
 	}
-	.stories-header {
-		
+	.stories-banner .stories-subtitle {
+		width: 65%;
 	}
 }
 
 @media #{$tablet-medium}{
 	.stories-banner{
 		.stories-title{
-		  font-size: 1.5rem;
+		  font-size: 2rem;
 		}
 	}
 /* ----------------- Stories Section -------------*/
@@ -185,19 +189,17 @@
 	      	max-width: 250px;
 	    } 
 	    .stories-title {
-		    color: #fff;
-		    border-bottom: solid 2px #fff;
-		    border-top: solid 2px #fff;
+		    color: black;
+		    border-bottom: solid 2px black;
+		    border-top: solid 2px black;
 		    padding:10px 0;
-		    width: 250px;
-		    text-transform: capitalize;
-		    font-weight: 500;
+		    width: 90%;
 		   	&:after{
 		   		content:" Stories"
 		   	}
 	    }
 	    .stories-subtitle{
-	    	color: black;
+	    	color: white;
 	    }
 	}
 
@@ -206,7 +208,7 @@
 	}
 
 	.stories-content {
-		margin-left: 10vw;
+		margin-left: 4vw;
 	}
 
 	.stories-main{
