--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -23,7 +23,10 @@
 		    color: #fff;
 		    text-decoration: none;
 		    text-transform: uppercase;
-		    font-weight: 300;
+		    margin-top: 0;
+		    font-weight: 500;
+		    font-family: $font__univers;
+		    margin-top: 1rem;
 		  }
 	}
 
@@ -33,17 +36,24 @@
 		padding: 1rem;
 	}
 
-	.the-bix-book-title{
-		width: 100%;
-		color:$color__orange;
-		border-bottom: solid 2px $color__orange;
-		border-top: solid 2px $color__orange;
-		font-size: 1rem;
-		letter-spacing: 1px;
-		padding:3px 0;
-		text-align: center;
+	.the-bix-book-title {
 		text-transform: uppercase;
-		font-weight: 500;
+	    font-weight: bold;
+	    font-family: $font__univers;
+	    letter-spacing: 5px;
+	    font-size: 2rem;
+	    margin: 0;
+	}
+
+	.the-bix-book-subtitle{
+		text-align: center;
+    text-transform: uppercase;
+    font-family: $font__univers;
+    font-weight: 100;
+    border-top: solid $color__gray 2px;
+    border-bottom: solid $color__gray 2px;
+    margin: 0.5rem;
+    padding: 0.5rem;
 	}
 	.book-title-wrapper{
 		display: flex;
@@ -290,16 +300,15 @@
 				overflow: auto;
 				max-width: 250px;
 			}
-			.the-bix-book-title{
-				color:black;
-				border-bottom: solid 2px black;
-				border-top: solid 2px black;
-				font-size: 1.5rem;
-				padding:10px 0;
-				width: auto;
-				text-transform: capitalize;
-				font-weight: 500;
+			.the-bix-book-subtitle{
+				width: 320px;
+				font-size: 1.3rem;
+			      letter-spacing: 1.5px;
+			      padding: 5px 5px;
 			}
+			.the-bix-book-title{
+		      font-size: 3.2rem;
+		    }
 		}
 		.bix-book-header {
 			width: 100%;
@@ -498,7 +507,7 @@
 
 		.book-section3{
 			max-width: 100vw;
-			.the-bix-book-title{
+			.the-bix-book-subtitle{
 				font-size: 2rem;
 				width: 500px;
 				span{
