--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -2206,7 +2206,10 @@ strong {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 300; }
+    margin-top: 0;
+    font-weight: 500;
+    font-family: "Univers_Condensed", sans-serif;
+    margin-top: 1rem; }
 
 .bix-book-header-container {
   text-align: center;
@@ -2214,16 +2217,22 @@ strong {
   padding: 1rem; }
 
 .the-bix-book-title {
-  width: 100%;
-  color: #F9AC31;
-  border-bottom: solid 2px #F9AC31;
-  border-top: solid 2px #F9AC31;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  padding: 3px 0;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: "Univers_Condensed", sans-serif;
+  letter-spacing: 5px;
+  font-size: 2rem;
+  margin: 0; }
+
+.the-bix-book-subtitle {
   text-align: center;
   text-transform: uppercase;
-  font-weight: 500; }
+  font-family: "Univers_Condensed", sans-serif;
+  font-weight: 100;
+  border-top: solid #444444 2px;
+  border-bottom: solid #444444 2px;
+  margin: 0.5rem;
+  padding: 0.5rem; }
 
 .book-title-wrapper {
   display: -ms-flexbox;
@@ -2443,15 +2452,13 @@ strong {
       width: 250px;
       overflow: auto;
       max-width: 250px; }
+    .bix-book-banner .the-bix-book-subtitle {
+      width: 320px;
+      font-size: 1.3rem;
+      letter-spacing: 1.5px;
+      padding: 5px 5px; }
     .bix-book-banner .the-bix-book-title {
-      color: black;
-      border-bottom: solid 2px black;
-      border-top: solid 2px black;
-      font-size: 1.5rem;
-      padding: 10px 0;
-      width: auto;
-      text-transform: capitalize;
-      font-weight: 500; }
+      font-size: 3.2rem; }
   .bix-book-header {
     width: 100%;
     background: rgba(255, 255, 255, 0.5); }
@@ -2585,10 +2592,10 @@ strong {
     z-index: 800; }
   .book-section3 {
     max-width: 100vw; }
-    .book-section3 .the-bix-book-title {
+    .book-section3 .the-bix-book-subtitle {
       font-size: 2rem;
       width: 500px; }
-      .book-section3 .the-bix-book-title span {
+      .book-section3 .the-bix-book-subtitle span {
         font-weight: 300; }
   .book-purchase {
     border: solid 1px #444444;
