--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -289,6 +289,7 @@
 
 		.bix-book-banner{
 			background: url(../../images/bix-book-banner-lg.jpg) no-repeat center left;
+			background-position: center;
 			background-size: cover;
 			height: 80vh;
 			overflow: hidden;
