--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -991,6 +991,20 @@ object {
     overflow: hidden; }
   .about-banner .about-header {
     background: rgba(255, 255, 255, 0.5); }
+  .about-banner .about-title {
+    width: 100%;
+    color: #F9AC31;
+    border-bottom: solid 2px #F9AC31;
+    border-top: solid 2px #F9AC31;
+    font-size: 1rem;
+    letter-spacing: 5px;
+    padding: 3px 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: "Univers_Condensed", sans-serif;
+    margin-bottom: 0;
+    margin-top: 10px; }
 
 .about-header-container {
   display: -ms-flexbox;
@@ -1184,6 +1198,7 @@ strong {
     display: -ms-flexbox;
     display: flex;
     background: url(../../images/about-page-banner-lg.jpg) no-repeat center left;
+    background-position: center;
     background-size: cover;
     height: 80vh;
     overflow: hidden;
@@ -1199,25 +1214,29 @@ strong {
       height: auto;
       width: auto;
       overflow: hidden;
-      max-width: 250px;
       color: black;
       border-bottom: solid 2px black;
       border-top: solid 2px black;
-      font-size: 1.5rem;
+      font-size: 2rem;
+      font-weight: bold;
       padding: 10px 0;
-      width: 250px;
-      text-transform: capitalize;
-      font-weight: 500;
-      text-align: center; }
+      font-weight: 700;
+      text-align: center;
+      width: 40vw;
+      max-width: 400px; }
     .about-banner p {
       visibility: visible;
       height: auto;
-      width: auto;
+      width: 50vw;
+      max-width: 300px;
       overflow: hidden;
       color: #fff;
-      font-weight: 300;
-      margin-top: 0;
-      text-align: center; }
+      letter-spacing: 2px;
+      margin-top: 10px;
+      margin-bottom: 0;
+      text-align: center;
+      text-transform: uppercase;
+      font-family: "Univers_Condensed", sans-serif; }
   .about-page-banner {
     display: block; }
   .author-section, .company-section {
@@ -2442,6 +2461,7 @@ strong {
 @media (min-width: 600px) {
   .bix-book-banner {
     background: url(../../images/bix-book-banner-lg.jpg) no-repeat center left;
+    background-position: center;
     background-size: cover;
     height: 80vh;
     overflow: hidden;
@@ -2780,6 +2800,7 @@ strong {
 @media (min-width: 900px) {
   .stories-banner {
     background: url(../../images/teaser-stories-banner.jpg) no-repeat center left;
+    background-position: center;
     background-size: cover;
     height: 80vh;
     overflow: hidden;
