--- a/themes/bix/sass/_about.scss
+++ b/themes/bix/sass/_about.scss
@@ -266,13 +266,11 @@ h3 {
 			color:black;
 			border-bottom: solid 2px black;
 			border-top: solid 2px black;
-			font-size: 2rem;
+			font-size: 2.5rem;
 			font-weight: bold;
 			padding:10px 0;
 			font-weight: 700;
 			text-align: center;
-		    width: 40vw;
-		    max-width: 400px;
 	    }
 	    
 	    p{
@@ -287,7 +285,8 @@ h3 {
 			margin-bottom: 0;
 			text-align: center;
 			text-transform: uppercase;
-			font-family: $font__univers;
+			font-family: $font__main;
+			font-weight: 300;
 	    }
 	}
 		.about-page-banner{
