--- a/themes/bix/sass/_stories.scss
+++ b/themes/bix/sass/_stories.scss
@@ -53,11 +53,12 @@
 		width: 80%;
 		display: block;
 		text-align: center;
-		font-family: $font__univers;
+		font-family: $font__main;
 		letter-spacing: 0.1rem;
 	}
 	.btn-download{
 	   background-color: black;
+	   border: solid 1px black;
 	    padding: 5px 20px;
 	    color: #fff;
 	    text-decoration: none;
@@ -65,6 +66,11 @@
 	    margin-top: 0;
 	    font-weight: 500;
 	    font-family: $font__univers;
+	    transition: all ease 0.4s;
+	    &:hover{
+      background-color: #fff;
+      color: black;
+    }
 	}
 }
 
@@ -191,10 +197,11 @@
 	    } 
 	    .stories-title {
 		    color: black;
-		    border-bottom: solid 2px black;
-		    border-top: solid 2px black;
+		    border-bottom: solid 1px black;
+		    border-top: solid 1px black;
 		    padding:10px 0;
-		    width: 90%;
+		    width: 70%;
+		    font-size: 2.5rem;
 		   	&:after{
 		   		content:" Stories"
 		   	}
