--- a/themes/bix/sass/_typography.scss
+++ b/themes/bix/sass/_typography.scss
@@ -4,15 +4,16 @@
 
 @font-face {
     font-family: 'Univers_Condensed';
-    src: url('./fonts/unvr57x-webfont.eot');
-    src: url('./fonts/unvr57x-webfont.eot?#iefix') format('embedded-opentype'),
-         url('./fonts/unvr57x-webfont.woff2') format('woff2'),
-         url('./fonts/unvr57x-webfont.woff') format('woff'),
-         url('./fonts/unvr57x-webfont.ttf') format('truetype'),
-         url('./fonts/unvr57x-webfont.svg#univers_condensedmedium') format('svg');
+    src: url('../../fonts/unvr57x-1-webfont.eot');
+    src: url('../../fonts/unvr57x-1-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../fonts/unvr57x-1-webfont.woff2') format('woff2'),
+         url('../../fonts/unvr57x-1-webfont.woff') format('woff'),
+         url('../../fonts/unvr57x-1-webfont.ttf') format('truetype'),
+         url('../../fonts/unvr57x-1-webfont.svg#univers_condensedmedium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
 
 body,
 button,
