--- a/themes/bix/sass/front-page-sections/_front-section-one.scss
+++ b/themes/bix/sass/front-page-sections/_front-section-one.scss
@@ -109,6 +109,7 @@
       position: absolute;
       left: 10vw; 
       min-height: 50vh;
+      bottom: 20%;
       .site-logo{
         max-width: 220px;
       }
